upd page viewport width + upd style scrollbar + fixed pading-left checkbox

--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -5,11 +5,11 @@
     height: 40px 
     line-height: 1
     padding: 12px 20px 0
+    padding-left: 58px
     +bold
     color: #32394d
     user-select: none
     cursor: pointer
-    padding-left: 28px
 
     input
         position: absolute
@@ -32,7 +32,7 @@
             content: ""
         &:before
             top: 12px
-            left: 0
+            left: 30px
             width: 16px
             height: 16px
             border: 1px solid #e7ebee
@@ -41,7 +41,7 @@
         &:after
             content: "" 
             top: 17px
-            left: 3px
+            left: 33px
             width: 6px
             height: 13px
             transition: opacity .2s ease-in-out
