--- a/src/sass/_sidebar.sass
+++ b/src/sass/_sidebar.sass
@@ -55,8 +55,6 @@
 	&__list
 		display: none
 		background-color: #f9fafb
-		&_checkbox
-			padding-left: 40px
 		.s-filter__arrow
 			right: 40px
 		&.is-active
